--- a/public/vectors/vector_algebra.html
+++ b/public/vectors/vector_algebra.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.rtl.min.css" integrity="sha384-trxYGD5BY4TyBTvU5H23FalSCYwpLA0vWEvXXGm5eytyztxb+97WzzY+IWDOSbav" crossorigin="anonymous">
-    <link rel="stylesheet" href="./themes/main.css">
+    <link rel="stylesheet" href="../themes/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="preamble.js"></script>
+    <script src="../preamble.js"></script>
     <title>جبر المُتَّجِهَات</title>
 </head>
 <body class="bg-dark text-white">
@@ -90,7 +90,7 @@
             عندما تكون على الحامل نفسه و لها الاتجاه نفسه.
         </p>
         <figure class="figure">
-            <img src="imgs/parallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="parallel vectors">
+            <img src="../imgs/parallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="parallel vectors">
             <figcaption class="figure-caption">مُتَّجِهات متوازية.</figcaption>
         </figure>
         <h3>المُتَّجِهَات المتوازية عكسياً</h3>
@@ -100,7 +100,7 @@
             عندما تكون على الحامل نفسه و جهة أحد المُتَّجِهين تعاكس جهة المُتَّجِه الآخر.
         </p>
         <figure class="figure">
-            <img src="imgs/antiparallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="antiparallel vectors">
+            <img src="../imgs/antiparallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="antiparallel vectors">
             <figcaption class="figure-caption">مُتَّجِهات متوازية عكسياً.</figcaption>
         </figure>
         <!-- <h3>المُتَّجِهَات المتخالفة</h3>
