--- a/public/vectors/vector_algebra_cartesian.html
+++ b/public/vectors/vector_algebra_cartesian.html
@@ -14,7 +14,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="../preamble.js"></script>
-    <title>جبر المُتَّجِهَات</title>
+    <title>جبر المُتَّجِهَات في الإحداثيات الديكارتية</title>
 </head>
 <body class="bg-dark text-white">
     <div class="container">
