Added Example component and Note component

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     -->
     <title>الصفحة الرئيسية</title>
 </head>
-<body class="bg-dark text-white">
+<body class="">
   <noscript>عليك تفعيل JavaScript حتى يعمل هذا التطبيق.</noscript>
   <div id="root"></div>
   <!--
